assets/k8s/database.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: timescaledb
  namespace: fireplace
spec:
  selector:
    app: timescaledb
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: timescaledb
  namespace: fireplace
spec:
  selector:
    matchLabels:
      app: timescaledb
  serviceName: timescaledb
  replicas: 1
  template:
    metadata:
      labels:
        app: timescaledb
    spec:
      containers:
        - name: timescaledb
          image: timescale/timescaledb:latest-pg11
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app: timescaledb
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: local-path
